cabal-version:      2.4
name:               emurgo45-snake
version:            0.1.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             cardano-on-the-road
maintainer:         cardano.on.the.road@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable emurgo45-snake
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Controller,
                    Draw,
                    Types,
                    Logger

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      text==1.2.4.1,
                      transformers==0.5.6.2,
                      mtl==2.2.2,
                      transformers-base==0.4.5.2,
                      array==0.5.4.0,
                      random==1.2.1,
                      matrix==0.3.6.1,
                      time ==1.9.3,
                      extra==1.7.10
    hs-source-dirs:   app
    default-language: Haskell2010
